# inquira

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: api.py  config.py  dependencies.py  logging.py  main.py
src/agent/: controller.py  llm_setup.py  prompt_template.py
src/db/: core.py
src/entities/: customer.py
src/scripts/: controller.py  seed.py
tests/: conftest.py
tests/e2e/: test_agent.py  test_main.py
